// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting country code and calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_CALLING_CODE_AND_COUNTRY_CODE",
      "userFriendlyMessage": "Provided country code and calling code are conflicting",
    },
    "message": "Provided country code and calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting country code and calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_CALLING_CODE_AND_COUNTRY_CODE",
      "userFriendlyMessage": "Provided country code and calling code are conflicting",
    },
    "message": "Provided country code and calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_CALLING_CODE",
      "userFriendlyMessage": "Provided and inferred calling code are conflicting",
    },
    "message": "Provided and inferred calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_CALLING_CODE",
      "userFriendlyMessage": "Provided and inferred calling code are conflicting",
    },
    "message": "Provided and inferred calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_COUNTRY_CODE",
      "userFriendlyMessage": "Provided and inferred country code are conflicting",
    },
    "message": "Provided and inferred country code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "CONFLICTING_PHONE_COUNTRY_CODE",
      "userFriendlyMessage": "Provided and inferred country code are conflicting",
    },
    "message": "Provided and inferred country code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_CALLING_CODE",
      "userFriendlyMessage": "Invalid calling code +999",
    },
    "message": "Invalid calling code +999",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_CALLING_CODE",
      "userFriendlyMessage": "Invalid calling code +999",
    },
    "message": "Invalid calling code +999",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_COUNTRY_CODE",
      "userFriendlyMessage": "Invalid country code XX",
    },
    "message": "Invalid country code XX",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_COUNTRY_CODE",
      "userFriendlyMessage": "Invalid country code XX",
    },
    "message": "Invalid country code XX",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid phone number format 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_NUMBER",
      "userFriendlyMessage": "Provided phone number is invalid not-a-number",
    },
    "message": "Provided phone number is invalid not-a-number",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid phone number format 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_NUMBER",
      "userFriendlyMessage": "Provided phone number is invalid not-a-number",
    },
    "message": "Provided phone number is invalid not-a-number",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field without country or calling code at all 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_NUMBER",
      "userFriendlyMessage": "Provided phone number is invalid 123456789",
    },
    "message": "Provided phone number is invalid 123456789",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field without country or calling code at all 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONE_NUMBER",
      "userFriendlyMessage": "Provided phone number is invalid 123456789",
    },
    "message": "Provided phone number is invalid 123456789",
    "name": "UserInputError",
  },
]
`;
